# BepiPred3.0-Predictor

./: .gitignore  DemoNoteBook.ipynb  README.md  UNIXOSEnvironment.yml  WindowsOSEnvironment.yml  bepipred3_CLI.py  requirements.txt
BP3/: LICENSE  MANIFEST.in  __init__.py  bepipred3.py  setup.cfg
BP3/BP3Models/BP3C50IDFFNN/: BP3C50IDFFNN_Fold4  BP3C50IDFFNN_Fold5
BP3/BP3Models/BP3C50IDSeqLenFFNN/: BP3C50IDFFNN_Fold1  BP3C50IDFFNN_Fold2  BP3C50IDFFNN_Fold3  BP3C50IDFFNN_Fold4  BP3C50IDFFNN_Fold5
BP3/ESM1b/: ESM1b_main.py
BP3/ESM1b/esm1b/: pretrained.py
BP3/bp3/: bepipred3.py  extract_local.py
BP3/bp3.egg-info/: PKG-INFO  SOURCES.txt
BP3/bp3/BP3Models/BP3C50IDFFNN/: BP3C50IDFFNN_Fold1.pt  BP3C50IDFFNN_Fold2.pt  BP3C50IDFFNN_Fold3.pt
BP3/bp3/esm_files/: esm_model_alphabet.pt  esm_model_args.pt
Version12_7/: DONE.txt
Version12_7/BP3/: LICENSE  pyproject.toml
Version12_7/BP3/bp3/: bepipred3.py
Version12_7/BP3/bp3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
antigen_output/: Bcell_epitope_preds.fasta
esm1b_encodings/: 2xwt_C.pt  3pnw_O.pt  4qci_D.pt  4xak_A.pt  4ypg_D.pt  5d8j_A.pt  5f72_K.pt  5th9_A.pt  6hga_B.pt  6u6u_R.pt  6vtw_A.pt  6y6c_A.pt  7chz_I.pt  7jum_A.pt  7lj4_B.pt
example_antigens/: antigens.fasta  example_antigens.fasta
example_output/: Bcell_epitope_preds.fasta  Bcell_epitope_top_10_preds.fasta  Bcell_epitope_top_15_preds.fasta  raw_output.csv
misc/biolib_bepipred3/: Dockerfile  README.md  bepipred3_CLI.py  example_antigens.fasta  info.txt  requirements.txt
misc/biolib_bepipred3/.biolib/: config.yml
(+41 files in other folders)
