[metadata]
name = bp3
version = 0.0.1
author = Joakim Clifford
author_email = cliffordjoakim@gmail.com
description = Bepipred-3.0. B-cell epitope prediction 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UberClifford/BepiPred3.0-Predictor
project_urls =
    Bug Tracker = https://github.com/UberClifford/BepiPred3.0-Predictor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
install_requires =
    setuptools
    importlib_resources


[options.entry_points]
console_scripts =
    resources-example = bp3:main

[bdist_wheel]
universal = 1
